- Added option to truncate the name of the main character for relayed text.
- No Longer invites because of a bot restart if autoinvite is on, they will get invited if they were in PG before restart anyway
- Added Option to have News Spammed at PGjoin.
- Added improved handling of rerolled characters.
- Whois table is no longer wiped for AoC bots upon startup.


-------------
Version 0.6.2
-------------
- Fixed double removal on !is calls for people not on the notify list
- Fixed Tyranny Port
- Fixed Update to whois table
- Fixed Check for in PG for mass invite
- Fixed Links in Main blob for maintenance
- Added Optional Timer to Raffle as well as support for Item output useing &item& lowid highid ql name
- Fixed pgleave in Raid
- Added a Fix for blobs that are too large for preg_match
- Added Relaying of Buddy Actions to Allow !online to include other org (when dif host)
- Improved Relay Bot responsed on getting bot into the pg
- Added Encription of Chat option to relay (req mhash & mcrypt)
- Added ignore setting for those users who maybe not want in your gc but want to still have relay with other org
- Added option of not having other org prefix shown
- Added Raid Status to !online
- Changed link inside !online to use !alts if alts arnt shows in whois (can be changed to use !alts by setting too)
- Added Option to view all alts inc the name you used inside alts Blob
- Added a Trigger in alts module for a check in points module
- Added a Reason part to add and Remove Points
- Added Logging of points
- Improved working and added some check to help prevent points being on wrong char
- Fixed Issue with Default preference not being cached when changed

-------------
Version 0.6.1
-------------
- Fixed a bug in buddy list handling of the Roster core.
- setcraft now has the option to set it as None, Update by gerborg
- Moved ServerList into conf folder and Checked US server List, 9 Updated, 6 Added